# unnamed-c-jam-project

./: .gitignore  CMakeLists.txt
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
res/: default.frag  default.vert
src/: image.c  image.h  main.c  matrix.c  matrix.h  opengl_context.c  opengl_context.h  readData.c  read_data.c  read_data.h
